Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               graph-wrapper
Version:            0.2.4.3
Maintainer:         Max Bolingbroke <batterseapower@hotmail.com>
Homepage:           http://www.github.com/batterseapower/graph-wrapper
License:            BSD3
License-File:       LICENSE
Author:             Max Bolingbroke
Synopsis:           A wrapper around the standard Data.Graph with a less awkward interface
Category:           Data Structures, Graphs

Library
    Exposed-Modules:    Data.Graph.Wrapper
                        Data.Graph.Wrapper.Internal

    Build-Depends:      base >= 3.0 && < 5.0,
                        array >= 0.3 && < 0.6,
                        containers >= 0.3 && < 0.6
    hs-source-dirs:     src

test-suite graph-wrapper-tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test, src
  main-is:              Spec.hs
  build-depends:        base >= 3.0 && < 5.0,
                        deepseq,
                        hspec,
                        QuickCheck
